# gear-smart-contract-academy

./: .gitignore
01-hello-world/: .binpath  Cargo.toml
01-hello-world/api/: .env  package-lock.json  package.json
01-hello-world/api/src/: deploy_program.ts
01-hello-world/src/: lib.rs
02-loan-state/: .binpath  Cargo.toml
02-loan-state/api/: .env  keys.json  package-lock.json  package.json
02-loan-state/api/src/: deploy_program.ts  fund.ts  read-state.ts  reimburse.ts  subscribe.ts
02-loan-state/src/: lib.rs
03-wait-wake-escrow/: .binpath  Cargo.toml
03-wait-wake-escrow/src/: lib.rs
04-fungible-token/: .binpath  Cargo.toml
04-fungible-token/io/: Cargo.toml
04-fungible-token/io/src/: lib.rs
04-fungible-token/src/: lib.rs
04-fungible-token/tests/: ft_test.rs  utils.rs
05-ico/: .binpath  Cargo.toml
05-ico/io/: Cargo.toml
05-ico/io/src/: lib.rs
05-ico/src/: ft_messages.rs  lib.rs
05-ico/tests/: ico_test.rs  utils.rs
06-non-fungible-token/: .binpath  Cargo.toml
06-non-fungible-token/gear-js-utils/: .env  package-lock.json  package.json
06-non-fungible-token/gear-js-utils/src/: deploy.ts  subscribe.ts
06-non-fungible-token/io/: Cargo.toml
06-non-fungible-token/io/src/: lib.rs
06-non-fungible-token/src/: lib.rs
07-sealed-bid-auction/: .binpath  Cargo.toml
07-sealed-bid-auction/io/: Cargo.toml
07-sealed-bid-auction/io/src/: lib.rs
07-sealed-bid-auction/src/: ft_nft_messages.rs  lib.rs
gear-js-utils/: index.ts  package.json
gear-js-utils/src/: event-listener.ts  send-message.ts  upload-program.ts
